[package]
name = "top10"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rain_water"
path = "01_rain_water/rust/main.rs"

[[bin]]
name = "rmco"
path = "02_mco/rust/main.rs"

[[bin]]
name = "lcis"
path = "03_lcis/rust/main.rs"

[[bin]]
name = "msa"
path = "04_max_subarray/rust/main.rs"

[dependencies]
anyhow = "1.0"