[package]
name = "top10"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rain_water"
path = "01_rain_water/rust/main.rs"

[[bin]]
name = "rmco"
path = "02_mco/rust/main.rs"

[[bin]]
name = "lcis"
path = "03_lcis/rust/main.rs"

[[bin]]
name = "msa"
path = "04_max_subarray/rust/main.rs"

[[bin]]
name = "sushi"
path = "05_sushi_for_two/rust/main.rs"

[[bin]]
name = "maxgap"
path = "06_max_gap/rust/main.rs"

[[bin]]
name = "maxgapcount"
path = "07_max_gap_count/rust/main.rs"

[[bin]]
name = "tco"
path = "08_three_consecutive_odds/rust/main.rs"

[[bin]]
name = "skyline"
path = "09_skyline/rust/main.rs"

[[bin]]
name = "ocean"
path = "10_ocean/rust/main.rs"

[dependencies]
anyhow = "1.0"
itertools = "*"